# LogEx

./: .gitignore  CMakeLists.txt  README.md  release-notes.md
cmake/: config.h.in  logex_configure.cmake
docs/: Doxyfile
logex/include/logex/: api.h  expression.h
logex/src/: api.cpp  expression.cpp  visitor.cpp
logicexpr/: CMakeLists.txt
logicexpr/include/logicexpr/: api.h  expr.h  expression.h  visitor.h
logicexpr/src/: api.cpp  expression.cpp  visitor.cpp
test/: CMakeLists.txt  main.cpp
test/src/: expression-test.cpp  test.cpp
